@@ -1,30 +1,11 @@
-% latex tex4ht-html0   or   xhlatex tex4ht-html0 "html,3,sections+"
+% $Id$
+%        latex tex4ht-html0
+% or   xhlatex tex4ht-html0 "html,3,sections+"
 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% tex4ht-html0.tex                                       %
-% Copyright (C) 1996--            Eitan M. Gurari        %
-%                                                        %
-% This work may be distributed and/or modified under the %
-% conditions of the LaTeX Project Public License, either %
-% version 1.3 of this license or (at your option) any    %
-% later version. The latest version of this license is   %
-% in                                                     %
-%   http://www.latex-project.org/lppl.txt                %
-% and version 1.3 or later is part of all distributions  %
-% of LaTeX version 2003/12/01 or later.                  %
-%                                                        %
-% This work has the LPPL maintenance status "maintained".%
-%                                                        %
-% This Current Maintainer of this work                   %
-% is Eitan M. Gurari.                                    %
-%                                                        %
-% If you modify this file your changing the signature    %
-% in \message{(signature)} below will be appreciated.    %
-%                                                        %
-%                             gurari@cse.ohio-state.edu  %
-%                 http://www.cse.ohio-state.edu/~gurari  %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
-\message{(<signature>)}
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 1996--2009 Eitan M. Gurari
+% Released under LPPL 1.3c+.
+% See tex4ht-cpright.tex for license text.
 
 \ifx \HTML\UnDef
    \def\HTML{html0} 
@@ -34,31 +15,9 @@
    \expandafter\next
 \fi
 
-
-
-%%%%%%%%%%%%%%%%%% definitions %%%%%%%%%%%%%%%%%%%%%%%%%
-
-\let\AltxModifyShowCode=\ModifyShowCode
-\def\ModifyShowCode{%
-   \def\by{by}\def\={=}\AltxModifyShowCode}
-\let\pReModifyOutputCode=\ModifyOutputCode
-\def\ModifyOutputCode{%
-   \def\by{}\def\={}%
-   \pReModifyOutputCode}
-
-\newcount\tmpcnt  \tmpcnt\time  \divide\tmpcnt  60
-\edef\temp{\the\tmpcnt}
-\multiply\tmpcnt  -60 \advance\tmpcnt  \time
-
-\edef\version{\the\year-\ifnum \month<10 0\fi
-  \the\month-\ifnum \day<10 0\fi\the\day
-   -\ifnum \temp<10 0\fi \temp
-   :\ifnum \tmpcnt<10 0\fi\the\tmpcnt}
-
-\def\CopyYear.#1.{%
-   \ifnum #1=\year #1\space\space\space\space\space\space
-    \else          #1--\the\year\fi
-}
+\input{common-code}
+\input{common}
+\input{tex4ht-cpright}
 
 \def\.{\string\a:mathml:\space}
 
@@ -2305,10 +2264,10 @@ else {
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \<html0\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% html0.4ht                             |version %
-% Copyright (C) |CopyYear.1997.       Eitan M. Gurari         %
-|<TeX4ht copyright|>
+% html0.4ht (|version), generated from |jobname.tex
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) |CopyYear.1996. Eitan M. Gurari
+|<TeX4ht copywrite|>
 >>>
 
 
@@ -3845,33 +3804,6 @@ The grouping below is handle the case that the matrix is a base of an exponent.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\<TeX4ht copyright\><<<
-%                                                        %
-% This work may be distributed and/or modified under the %
-% conditions of the LaTeX Project Public License, either %
-% version 1.3 of this license or (at your option) any    %
-% later version. The latest version of this license is   %
-% in                                                     %
-%   http://www.latex-project.org/lppl.txt                %
-% and version 1.3 or later is part of all distributions  %
-% of LaTeX version 2003/12/01 or later.                  %
-%                                                        %
-% This work has the LPPL maintenance status "maintained".%
-%                                                        %
-% This Current Maintainer of this work                   %
-% is Eitan M. Gurari.                                    %
-%                                                        %
-% If you modify this program your changing its signature %
-% with a directive of the following form will be         %
-% appreciated.                                           %
-%            \message{signature}                         %
-%                                                        %
-%                             gurari@cse.ohio-state.edu  %
-%                 http://www.cse.ohio-state.edu/~gurari  %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\immediate\write-1{version |version}
->>>
-
 
 \<par del\><<<
 !*?: >>>
@@ -3927,9 +3859,5 @@ tail>>>
                                    \noexpand\UnDefcS}
 \catcode`\:|=11  \catcode`\#|=6 
 >>>
-
-
-
-
 
 \endinput
